tests/types_mut_bad_ref_assign_value.stderr
tests/types_mut_bad_ref_assign_value.sl:5:2: error: SL2004: type mismatch
